--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -5,8 +5,9 @@
 
 *{
 box-sizing: border-box;
-text-decoration: none;
 font-family: sans-serif,'Roboto';
+text-decoration: none;
+list-style: none;
 /* outline: none; */
 }
 
@@ -26,10 +27,14 @@ html,
 body{
 padding: 0;
 margin: 0;
-background: var(--lightgray);
+/* background-color: red; */
+/* height: 100vh;
+width: 100vw; */
+background: var(--lightgray); 
 
-/* overflow-x: hidden; tirar barra de rolagem na horizontal */
-/* overflow-y: hidden; tirar barra de rolagem na vertical */
+
+ overflow-x: hidden; /* tirar barra de rolagem na horizontal */
+/* overflow-y: hidden;  tirar barra de rolagem na vertical */
 }
 
 .container{
@@ -40,19 +45,29 @@ flex-direction: column;
 header{
 display: flex;
 justify-content: space-between;
-height: 100px;
+height: 60px;
 width: 100vw;
 align-items: center;
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
 box-shadow: 10px 5px 8px rgba(0,0,0,0.4);
 }
 
-
-span{
-color: aliceblue;
+.home{
+display: flex ;
+align-items: center;
+font-size: 20px;
 }
 
-/*aside */
+ul li a {
+padding: 0 7px;
+color: #fff;
+}
+
+ul{
+padding: 0 40px;
+}
+
+/*aside ###*/
 .aside-padding{
 padding: 0 40px;
 }
@@ -63,16 +78,16 @@ color: aliceblue;
 
 
 
-/* link de configuração */
+/* link de configuração ### desativado ###*/
 .config{
 color: white;
-font-size: 25px;
+font-size: 20px;
 }
 
 
 /* button exit */
 .exit{
-border-radius: 15px;
+border-radius: 5px;
 border-top: none;
 border-left: none;
 border-right: none;
@@ -96,19 +111,10 @@ transition: 0.5s all 100ms;
 background: rgb(255, 0, 0, 0.6);
 }
 
-/* main */
-main{
-margin: 0;
-padding: 0;
-}
-
-/* flex-row-form */
+/* form */
 .flex-row-form{
 display: flex;
 justify-content: center;
-height: 100vh;
-margin-top: 77px;
-
 }
 
 .flex1-form{
@@ -178,28 +184,33 @@ border-radius: 10px;
 textarea,
 input{
 outline: 0;
+/* background-color: #d1d1d1; */
 }
 
 .count{
-display: flex;
-justify-content: end;
-margin: 25px 60px;
-font-size: 2rem;
+margin: 0;
+padding: 0;
+margin: auto;
 }
 
 footer{
-width: 100%;
-border: solid 2px;
+display: flex;
+align-items: center;
+justify-content: center;
 background-color: rgba(0,0,0, 0.8) ;
+margin-top: 80px;
+height: 110px;
 
 }
+
+ /* responsive init */
 
 @media (max-width: 600px){
 .flex-row-form{
 display: flex;
 flex-direction: column;
-margin: 360px 0 0 0;
-width: 400px;
+margin: 20px 0 0 0;
+width: 100vw;
 }
 .exit{
 display: none;
@@ -236,14 +247,19 @@ padding: 0 10px 0 10px;
 width: 380px;
 }
 
+.flex4-form{
+ padding: 0;
+ margin: 0;
+}   
+
 .count{
 display: none;
 }
 
 .input-submit{
-position: absolute;
-margin-left: 270px;
-top: 1033px;
+
+/* margin-left: 270px; */
+/* top: 1033px; */
 }
 
 footer{
@@ -257,6 +273,10 @@ span{
 display: flex;
 justify-content: center;
 }
+}
+
+span{
+color: aliceblue;
 }
 
 
@@ -328,10 +348,15 @@ background-color: rgba(0,0,0, 0.8);
 top: 1100px;
 
 }
+
 span{
 display: flex;
 justify-content: start;
 }
+}
+
+overflow-y:scroll{
+    width: 1px;
 }
 
 
@@ -575,7 +600,7 @@ margin: 0;
 padding: 0;
 }
 a{
-font-size: 24px;
+font-size: 20px;
 }
 
 .input-fone,
@@ -649,9 +674,7 @@ width: 90px;
 margin: 0;
 padding: 0;
 }
-a{
-font-size: 19px;
-}
+
 
 .input-fone,
 .input-cpf,
