--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -214,6 +214,8 @@ span{
 .flex-row-form{
 display: flex;
 flex-direction: column;
+align-items: center;
+/* justify-self: center; */
 margin: 20px 0 0 0;
 width: 100vh;
 }
