--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -210,7 +210,7 @@ span{
 
  /* responsive init */
 
-@media (max-width: 600px){
+@media screen and (max-width: 600px){
     body{
         width: 100vh;
     }
