--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -33,8 +33,8 @@ width: 100vw; */
 background: var(--lightgray); 
 
 
- overflow-x: hidden; /* tirar barra de rolagem na horizontal */
-/* overflow-y: hidden;  tirar barra de rolagem na vertical */
+ /*  overflow-x: hidden; tirar barra de rolagem na horizontal */
+/*overflow-y: hidden;  tirar barra de rolagem na vertical */
 }
 
 .container{
@@ -234,7 +234,7 @@ nav ul{
     padding: 10px;
 }
 
-.exit{
+.aside-padding{
     padding: 10px;
 }
 
