header settings and

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -300,6 +300,7 @@ top: 1100px;
 
 
 
+
 @media screen and (max-width: 200px){
     body{
         width: 100vh;
@@ -308,7 +309,7 @@ top: 1100px;
 .flex-row-form{
 display: flex;
 flex-direction: column;
-align-items: center;
+/* align-items: center; */
 /* justify-self: center; */
 margin: 20px 0 0 0;
 width: 100vh;
