--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,3 +1,14 @@
+:root{
+    --lightgray: lightgray;
+    --blue: ???;
+    --gray: ???;
+    
+    /* ### exemplos como utilizar as variaveis do root
+    background-color: var(--orange);
+     */
+
+    }
+
 /* font importing */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -6,30 +17,13 @@
 *{
 box-sizing: border-box;
 font-family: sans-serif,'Roboto';
-text-decoration: none;
-list-style: none;
+padding: 0;
+margin: 0;
 /* outline: none; */
 }
 
-:root{
---lightgray: lightgray;
---blue: ???;
---gray: ???;
-
-/* ### exemplos como utilizar as variaveis do root
-background-color: var(--orange);
-background: var(--orange);
-color: var(--orange); */
-
-}
-
-html,
 body{
-padding: 0;
-margin: 0;
-/* background-color: red; */
-/* height: 100vh;
-width: 100vw; */
+min-height: 100%;
 background: var(--lightgray); 
 
 
@@ -61,6 +55,8 @@ font-size: 20px;
 ul li a {
 padding: 0 7px;
 color: #fff;
+text-decoration: none;
+/* list-style: none; */
 }
 
 ul{
@@ -200,7 +196,6 @@ justify-content: center;
 background-color: rgba(0,0,0, 0.8) ;
 margin-top: 80px;
 height: 110px;
-
 }
 
 span{
@@ -212,8 +207,9 @@ span{
 
 @media screen and (min-width: 200px) and (max-width: 640px){
     body{
-        /* height: 100vh; */
-        width: 100vw;
+        min-height: 100vh;
+        /* min-width: 100px; */
+       
     }
 
 .flex-row-form{
@@ -222,11 +218,10 @@ flex-direction: column;
 align-items: center;
 /* justify-self: center; */
 margin: 20px 0 0 0;
-width: 100vh;
 }
 
 header{
-   width: 100vh;
+   /* width: 100%; */
    justify-content: space-between;
 
 }
@@ -291,7 +286,7 @@ top: 1100px;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100vh;
+        width: 100%;
         margin: 0;
         padding: 0;
     }
