--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -205,7 +205,97 @@ span{
 
  /* ### responsive init ### */
 
-@media screen and (min-width: 200px) and (max-width: 640px){
+@media screen and (min-width: 450px) and (max-width: 640px){
+    body{
+        min-height: 100vh;
+        /* min-width: 100px; */
+       
+    }
+
+.flex-row-form{
+display: flex;
+flex-direction: column;
+align-items: center;
+/* justify-self: center; */
+margin: 20px 0 0 0;
+}
+
+header{
+   /* width: 100%; */
+   justify-content: space-between;
+
+}
+
+nav ul{
+    padding: 0 10px;
+}
+
+.aside-padding{
+    padding: 0 10px;
+}
+
+.input-fone,
+.input-cpf,
+.input-cidade,
+.input-emissao,
+.input-endereco,
+.input-bairro,
+.input-nasc,
+.input-mae,
+.input-name,
+.input-cep,
+.input-cidade,
+.input-sus,
+.input-rg{
+width: 360px;
+}
+.input-uf{
+width: 43px;
+}
+.flex1-form{
+padding: 0 10px 0 10px;
+}
+
+.flex2-form{
+padding: 10px 10px;
+}
+
+.flex3-form{
+padding: 0 10px 0 10px;
+width: 380px;
+}
+
+.flex4-form{
+padding: 0;
+margin: 10px 10px;
+    }
+    
+.count{
+display: none;
+}
+
+footer{
+position: absolute;
+border: solid 2px;
+background-color: rgba(0,0,0, 0.8);
+top: 1100px;
+
+}
+
+    footer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    
+
+}
+
+
+@media screen and (max-width: 449px){
     body{
         min-height: 100vh;
         /* min-width: 100px; */
