--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -221,8 +221,8 @@ margin: 20px 0 0 0;
 }
 
 header{
-   width: 100%;
-   justify-content: space-between;
+   /* width: 100%; */
+   justify-content: start;
 
 }
 
