--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -56,7 +56,7 @@ ul li a {
 padding: 0 7px;
 color: #fff;
 text-decoration: none;
-/* list-style: none; */
+list-style: none;
 }
 
 ul{
@@ -227,11 +227,11 @@ header{
 }
 
 nav ul{
-    padding: 0 10px;
+    padding: 0 0 0 0;
 }
 
 .aside-padding{
-    padding: 0 10px;
+    padding: 0 0 0 0;
 }
 
 .input-fone,
