generatePDF display: none

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -52,6 +52,7 @@ align-items: center;
 font-size: 20px;
 }
 
+
 ul li a {
 padding: 0 7px;
 color: #fff;
@@ -224,6 +225,14 @@ header{
    /* width: 100%; */
    justify-content: space-between;
 
+}
+
+svg{
+    display: none;
+}
+
+.generatePDF{
+    display: none;
 }
 
 nav ul{
