--- a/src/assets/css/generatePDF.css
+++ b/src/assets/css/generatePDF.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
 *{
     box-sizing: border-box;
 
@@ -10,7 +9,7 @@ html,
 body{
     margin: 0;
     padding: 0;
-    font-family: sans-serif, 'Ubuntu',;
+    font-family: sans-serif, 'Roboto';
 }
 
 .container{
