--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -121,7 +121,7 @@ flex-direction: column;
 padding: 20px 20px 0 0;
 }
 
-.flex3-submit{
+.flex-submit{
 /* display: flex; */
 margin-top: 139px;
 }
