--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -121,8 +121,7 @@ flex-direction: column;
 padding: 20px 20px 0 0;
 }
 
-.flex-submit{
-/* display: flex; */
+.flex3-submit{
 margin-top: 139px;
 }
 
