--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -113,10 +113,6 @@ display: flex;
 justify-content: center;
 }
 
-.flex3-submit{
-    margin-top: 140px;
-    }    
-
 .flex1-form{
 display: flex;
 flex-direction: column;
@@ -127,6 +123,10 @@ padding: 20px 50px;
 display: flex;
 flex-direction: column;
 padding: 20px 20px 0 0;
+}
+
+.input-fone{
+    margin: 0 0 140px 0;
 }
 
 input,
