--- a/src/assets/css/generatePDF.css
+++ b/src/assets/css/generatePDF.css
@@ -14,6 +14,7 @@ body{
 
 .container{
     display: flex;
+    flex-direction: column;
     align-items: center;
     
 }
@@ -79,7 +80,5 @@ td{
 
 /* button go-back */
 .go-back{
-    display: flex;
-    position: absolute;
-    top: 30px;
+    margin: 0 50px;
 }
