--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -135,6 +135,7 @@ outline: 0;
 }
 
 /* todos os inputs, vão ficar com essa largura  ( width: 360px )*/
+
 .input-name{
 width: 360px;
 }
@@ -180,9 +181,10 @@ color: aliceblue;
 .flex-row-form{
 display: flex;
 flex-direction: column;
-align-items: center;
+/* align-items: center; */
 /* justify-self: center; */
 margin: 20px 0 0 0;
+width: 100%;
 }
 
 header{
@@ -191,34 +193,6 @@ justify-content: space-between;
 
 }
 
-svg{
-display: none;
-}
-
-.generatePDF{
-display: none;
-}
-
-nav ul{
-padding: 0 0 0 0;
-}
-
-.aside-padding{
-padding: 0 0 0 0;
-}
-
-.input-endereco,
-.input-bairro,
-.input-nasc,
-.input-mae,
-.input-name,
-.input-cep,
-.input-sus{
-width: 360px;
-}
-.input-uf{
-width: 43px;
-}
 .flex1-form{
 padding: 0 10px 0 10px;
 }
@@ -227,26 +201,20 @@ padding: 0 10px 0 10px;
 padding: 10px 10px;
 }
 
-.flex3-form{
-padding: 0 10px 0 10px;
-width: 380px;
-}
-
-.flex4-form{
-padding: 0;
-margin: 10px 10px;
+.input-fone{
+    margin: 0 0 10px 0;
 }
 
 .count{
 display: none;
 }
 
-footer{
-position: absolute;
-border: solid 2px;
-background-color: rgba(0,0,0, 0.8);
-top: 1100px;
+.exit{
+    display: none;
+}
 
+nav{
+    display: none;
 }
 
 footer{
@@ -254,9 +222,32 @@ display: flex;
 align-items: center;
 justify-content: center;
 width: 100%;
-margin: 0;
-padding: 0;
+top: 870px;
+
+}
+
 }
 
 
+
+
+@media (max-width: 385px){
+    
+    .input-fone,
+    .input-uf,
+    .input-cidade,
+    .input-cpf,
+    .input-rg,
+    .input-emissao,
+    .input-sexo,
+    .input-descricao,
+    .input-endereco,
+    .input-bairro,
+    .input-cep,
+    .input-sus,
+    .input-mae,
+    .input-nasc,
+    .input-name{
+        width: 250px;
+    }
 }
