--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -13,15 +13,17 @@ background-color: var(--orange);
 
 *{
 box-sizing: border-box;
-font-family: sans-serif,'Roboto';
 padding: 0;
 margin: 0;
+outline: 0;
 /* outline: none; */
 }
 
 html,
 body{
 height: 100vh;
+font-family: sans-serif,'Roboto';
+text-rendering: optimizelegibility;
 background: var(--lightgray);
 /* min-height: 100%; */
 
@@ -34,20 +36,26 @@ display: flex;
 flex-direction: column;
 }
 
-header{
+.container-header{
 display: flex;
+align-items: center;
 justify-content: space-between;
 height: 60px;
-align-items: center;
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
 box-shadow: 10px 5px 8px rgba(0,0,0,0.4);
+
 }
 
-.home{
+header nav ul {
+    display: flex;
+  }
+  
+
+/* .home{
 display: flex ;
 align-items: center;
 font-size: 20px;
-}
+} */
 
 
 nav ul li a {
@@ -135,6 +143,9 @@ outline: 0;
 }
 
 /* todos os inputs, vão ficar com essa largura  ( width: 360px )*/
+.input-name{
+    width: 360px;
+}
 
 .input-sexo{
 width: 39px;
@@ -171,6 +182,8 @@ color: aliceblue;
 }
 
 
+
+
 /* ### responsive init ### */
 
 @media screen and (min-width: 200px) and (max-width: 640px){
@@ -182,6 +195,12 @@ flex-direction: column;
 /* justify-self: center; */
 /* width: 100%; */
 }
+ 
+/* todos os inputs, vão ficar com essa largura  ( width: 100% ) seguir o ### fluxo ### */
+.input-name{
+    width: 100%;
+}
+
 
 header{
 /* width: 100%; */
@@ -190,7 +209,7 @@ justify-content: space-between;
 }
 
 .flex1-form{
-padding: 0 10px 0 10px;
+padding: 10px 10px 0 10px;
 }
 
 .flex2-form{
@@ -205,13 +224,6 @@ padding: 10px 10px;
 display: none;
 }
 
-.exit{
-    display: none;
-}
-
-nav{
-    display: none;
-}
 
 footer{
 display: flex;
@@ -223,6 +235,94 @@ top: 870px;
 }
 
 }
+
+
+
+@media (max-width: 500px){
+    .exit{
+    display: none;
+}
+
+nav{
+    display: none;
+}
+
+}
+
+
+
+ /********* menu hamburguer *********/
+@media (max-width: 490px){
+    nav{
+        display: none;
+    }
+
+    .menu-toggle{
+        width: 40px;
+        height: 30px;
+        margin-right: 20px;
+    }
+
+    .one,
+    .two,
+    .three{
+        background-color: #fff;
+        height: 5px;
+        width: 100%;
+        margin: 6px auto;
+
+        transition-duration: 0.3s;
+    }
+
+    /* fullScreen */
+    .menu-section.on{
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100vh;
+        height: 100vh;
+
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
+
+        z-index: 10;
+    }
+
+    .menu-section.on nav{
+        display: block;
+    }
+
+    .menu-section.on .menu-toggle{
+        position: absolute;
+        right: 0;
+        top: 15px;
+    }
+
+    .menu-section.on .menu-toggle .one{
+        transform: rotate(45deg) translate(7px, 7px);
+    }
+
+    .menu-section.on .menu-toggle .two{
+      opacity: 0;
+    }
+
+    .menu-section.on .menu-toggle .three{
+        transform: rotate(-45deg) translate(10px, -9px);
+      }
+
+      .menu-section.on nav ul{
+          text-align: center;
+          display: block;
+      }
+
+      .menu-section.on nav ul a{
+      transition-duration: 0.5s;
+      line-height: 4rem;
+      display: block;
+    }
+
+}
+
 
 /* .input-fone,
 .input-uf,
