--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -24,6 +24,7 @@ body{
 height: 100vh;
 font-family: sans-serif,'Roboto';
 text-rendering: optimizelegibility;
+-webkit-font-smoothing: antialiased;
 background: var(--lightgray);
 /* min-height: 100%; */
 
@@ -37,13 +38,18 @@ flex-direction: column;
 }
 
 .container-header{
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
+box-shadow: 10px 5px 8px rgba(0,0,0,0.4);
+}
+
+.container-header{
 display: flex;
 align-items: center;
 justify-content: space-between;
-height: 60px;
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
-box-shadow: 10px 5px 8px rgba(0,0,0,0.4);
 
+
+width: 100%;
+  margin: auto;
 }
 
 header nav ul {
@@ -135,11 +141,6 @@ padding: 20px 20px 0 0;
 
 .input-fone{
     margin: 0 0 140px 0;
-}
-
-input,
-textarea{
-outline: 0;
 }
 
 /* todos os inputs, vão ficar com essa largura  ( width: 360px )*/
@@ -280,12 +281,16 @@ nav{
         top: 0;
         left: 0;
 
-        width: 100vh;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
 
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
 
         z-index: 10;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .menu-section.on nav{
