--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -49,7 +49,7 @@ justify-content: space-between;
 
 
 width: 100%;
-  margin: auto;
+  /* margin: auto; */
 }
 
 header nav ul {
@@ -261,7 +261,8 @@ nav{
     .menu-toggle{
         width: 40px;
         height: 30px;
-        margin-right: 20px;
+        margin-left: 300px;
+        /* margin-right: 20px; */
     }
 
     .one,
@@ -281,8 +282,8 @@ nav{
         top: 0;
         left: 0;
 
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
 
         background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgba(6,70,161,1) 0%, rgba(9,9,121,1) 100%);
 
@@ -291,7 +292,10 @@ nav{
         display: flex;
         justify-content: center;
         align-items: center;
+        
+
     }
+
 
     .menu-section.on nav{
         display: block;
