--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -49,6 +49,7 @@ justify-content: space-between;
 
 
 width: 100%;
+height: 40px;
   /* margin: auto; */
 }
 
@@ -97,12 +98,12 @@ font-size: 20px;
 
 /* button exit */
 .exit{
+    width: 10px;
 border-radius: 5px;
 border-top: none;
 border-left: none;
 border-right: none;
 border-bottom: none;
-margin: 0 7px;
 }
 
 .exit{
@@ -261,7 +262,8 @@ nav{
     .menu-toggle{
         width: 40px;
         height: 30px;
-        margin-left: 300px;
+        margin-right: 30px;
+        /* margin-left: px; */
         /* margin-right: 20px; */
     }
 
@@ -271,7 +273,7 @@ nav{
         background-color: #fff;
         height: 5px;
         width: 100%;
-        margin: 6px auto;
+        margin: 6px;
 
         transition-duration: 0.3s;
     }
@@ -292,8 +294,6 @@ nav{
         display: flex;
         justify-content: center;
         align-items: center;
-        
-
     }
 
 
