--- a/src/assets/css/generatePDF.css
+++ b/src/assets/css/generatePDF.css
@@ -51,16 +51,16 @@ footer{
     top: 800px;
     
     }
-    
-   h1{
-       margin-left: 25px;
-   }
-
+   
    address{
-    margin-left: 25px;
+    margin-left: 10px;
+} 
+
+.padding-top{
+    padding-top: 5px;
 }
 
-.padd{
+/* .padd{ 
     margin: 0 0 10px 0;
 }
 
@@ -68,10 +68,13 @@ footer{
     margin: 10px 0 0 0;
 }
 
+.desc{
+    margin: 0 0 0 10px;
+} */
+
 p{
     padding: 3px 0;
 }
-
 
 
 
