--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -16,7 +16,6 @@ box-sizing: border-box;
 padding: 0;
 margin: 0;
 outline: 0;
-/* outline: none; */
 }
 
 html,
@@ -68,13 +67,13 @@ font-size: 20px;
 nav ul li a {
 padding: 0 7px;
 color: #fff;
-text-decoration: none;
+/* text-decoration: none; */
 
 }
 
 nav ul li{
 list-style: none;
-font-size: 2rem;
+font-size: 1rem;
 }
 
 ul{
