--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -294,6 +294,12 @@ nav{
         display: flex;
         justify-content: center;
         align-items: center;
+
+        transition: transform 0.2s 1s;
+    }
+
+    .menu-section.on:hover{
+        transform: scale(1.5);
     }
 
 
