--- a/src/assets/css/signin.css
+++ b/src/assets/css/signin.css
@@ -4,6 +4,8 @@
 *{
     box-sizing: border-box;
 	text-decoration: none;
+	margin: 0;
+	padding: 0;
 }
 
 html,
@@ -14,12 +16,41 @@ body{
     /* height: 100vh; */
 }
 
-.form-signin{
-	position: relative;
-	width: 300px;
-    margin: 150px auto;
-    text-align: center;
+
+
+.content{
+	width: 100vw;
+    height: 100vh;
+	display: flex;
+	justify-content: center;
+    align-items: center;
 }
+
+.border-auth{
+	width: 400px;
+	border: solid 1px;
+	border-bottom: solid 0;
+	border-top: solid 0;
+
+	border-right: 2px solid #1C6EA4;
+	border-radius: 0px 40px 0px 0px;
+
+	border-left: 2px solid #1C6EA4;
+    border-radius: 40px 40px 0px 0px;
+
+	z-index: 999;
+}
+
+
+.form-signin{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+	width: 300px;
+    margin: auto;
+    /* text-align: center; */
+}
+
 input{
     display: block;
     margin: 10px auto;
@@ -32,18 +63,10 @@ input{
 	height: 40px;
 }
 
-.border-auth{
-	border: solid 1px;
-	margin: auto;
-	width: 400px;
-	border-bottom: solid 0;
-	border-top: solid 0;
-
-	border-right: 2px solid #1C6EA4;
-	border-radius: 0px 40px 0px 0px;
-
-	border-left: 2px solid #1C6EA4;
-    border-radius: 40px 40px 0px 0px;
+input{
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
 }
 
 
@@ -79,12 +102,6 @@ input{
 	border-left: none;
 	border-right: none;
 	border-color: #1c6ea4;
-}
-
-input{
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	appearance: none;
 }
 
 /* label ~ input{
