--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -141,7 +141,7 @@ padding: 20px 20px 0 0;
 }
 
 .input-fone{
-margin: 0 0 151px 0;
+margin: 0 0 155px 0;
 }
 
 /* todos os inputs, vão ficar com essa largura ( width: 360px )*/
@@ -153,12 +153,14 @@ width: 360px;
 width: 39px;
 }
 
-.input-submit{
+/* button enviar */
+/* .input-submit{
 display: inline;
 width: 100px;
 height: 30px;
+margin: auto;
 border-radius: 5px;
-}
+} */
 
 .count{
 display: flex;
