--- a/src/assets/css/buttonUpData.css
+++ b/src/assets/css/buttonUpData.css
@@ -1,40 +1,60 @@
 .input-submit1{
     width: 10px;
     border-radius: 5px;
-    border-top: none;
+    /* border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: none;
+    border-bottom: none; */
     }
     
     .input-submit1{
-    background: #228B22;
+    background: #8d8d8d;
     font-size: 17px;
     width: 90px;
     height: 25px;
     cursor: pointer;
-    color: white;
+    color: #222;
     
-    /* box-shadow: 5px 2px 2px black; */
+    transition: all 0.3s;
+    box-shadow: 2px 2px 0 0 black;
     }
+
+    .input-submit1:hover{
+        -webkit-transform: scale(0.9);
+        -ms-transform: scale(0.9);
+        transform: scale(0.9);
+        background: rgb(56, 197, 24);
+}
     
+
+
+
+/*    button 2    */
 
     .input-submit2{
         width: 10px;
         border-radius: 5px;
-        border-top: none;
+        /* border-top: none;
         border-left: none;
         border-right: none;
-        border-bottom: none;
+        border-bottom: none; */
         }
         
         .input-submit2{
-        background: #1E90FF;
+        background: #8d8d8d;
         font-size: 16px;
         width: 90px;
         height: 25px;
         cursor: pointer;
-        color: white;
+        color: #222;
         
-        /* box-shadow: 5px 2px 2px black; */
+        transition: all 0.3s;
+        box-shadow: 2px 2px 0 0 black;
         }
+
+   .input-submit2:hover{
+            -webkit-transform: scale(0.9);
+            -ms-transform: scale(0.9);
+            transform: scale(0.9);
+            background: rgb(255, 7, 7);
+    }
