--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -360,6 +360,14 @@ display: block;
 .exitMenuHamburguer{
 display: block;
 }
+
+.go-back{
+    margin: 0;
+}
+
+.imprimir{
+    margin: 0;
+}
 }
 
 
