--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -185,6 +185,23 @@ footer span{
 color: aliceblue;
 }
 
+.fa-whatsapp{
+    margin-left: 30px;
+    /* cursor: pointer; */
+}
+
+.whatsapp{
+    margin-left: 5px;
+}
+
+.whatsapp a{
+    text-decoration: none;
+    color: aliceblue;
+}
+
+.whatsapp a:hover{
+    color: green;
+}
 
 /* button exitMenuHamburguer */
 .exitMenuHamburguer{
